# my-media-sub

./: .WORK_PROGRESS.md  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG-v1.1.0.md  CHANGELOG-v1.10.0.md  CHANGELOG-v1.11.0.md  CHANGELOG-v1.12.0.md  CHANGELOG-v1.13.0.md  CHANGELOG-v1.13.1.md  CHANGELOG-v1.2.0.md  CHANGELOG-v1.3.0.md  CHANGELOG-v1.9.0.md  CHANGELOG-v2.0.0.md  CHANGELOG-v2.1.0.md  CHANGELOG-v2.1.1.md  CHANGELOG-v2.1.2.md  CHANGELOG-v2.2.0.md  CHANGELOG-v2.2.1.md  CHANGELOG-v2.2.2.md  CHANGELOG-v2.2.3.md  CHANGELOG-v2.2.4.md  CHANGELOG-v2.2.5.md  CHANGELOG.md  COMPLETION_SUMMARY.md  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.local  IMPLEMENTATION_SUMMARY.md  LICENSE  LINK_CHECK_FEATURE.md  NEXT_STEPS.md  PANSOU_API_ISSUE.md  README.md  README_RUST.md  RELEASES.md  REPORT-inline-search-local-mount.md  (+24 more)
data/: app.db  notifications.json  settings.json  subscriptions.json
docs/: 2026-06-12-summary.md  ani-rss-reference.md  api-contract.md  architecture.dot  architecture.md  automation-api.md  automation-events.md  browser-history-completed.md  browser-history-feature.md  deployment.md  drive-full-features-report.md  frontend-media-deck-checkpoint.md  https-reverse-proxy.md  media-calendar.md  next-steps-0.9.3.md  night-optimization-report.md  night-plan.md  openapi-baseline-v1.12.0.json  port-configuration.md  push-optimization-report.md  pwa.md  refactor-plan.md  responsive-design-report.md  roadmap.md  rust-rewrite-kickoff.md  security-audit.md  source-quality.md  storage-scaling.md  telegram-bot.md  upgrade-v1.10.0.md  upgrade-v1.11.0.md  upgrade-v1.12.0.md  upgrade-v1.13.0.md  upgrade-v1.13.1.md  upgrade-v1.2.0.md  upgrade-v1.3.0.md  upgrade-v1.9.0.md  upgrade-v2.0.0.md  upgrade-v2.1.0.md  upgrade-v2.1.1.md  (+20 more)
examples/: search_quark.py
scripts/: build-css.sh  build-frontend.mjs  check-openapi.py  docker-entrypoint.sh  smoke-browser.sh  smoke-docker-upgrade.sh  smoke-release.sh  smoke-soak.sh  smoke-telegram.sh  smoke-upgrade.sh
src/: app.py  app.rs  app_updated.py  aria2_client.py  auth.py  config.py  config.rs  config_new.py  database.py  download_capabilities.py  error.rs  lib.rs  link_checker.py  main.py  main.rs  (+8 more)
src.backup/: app_updated.py  auth.py  database.py  task_queue.py
(+286 files in other folders)
